# capstone_project

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
adapter/: README.md  closest_match.py  main.py
clients/chrome/: README.md  background.js  manifest.json  popup.html  popup.js
clients/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
deploy/docker/: .dockerignore  .env.example  Dockerfile.server  README.md  docker-compose.yml
deploy/fim/: README.md  local_rules.xml.snippet  pkgsentinel-trigger.sh  wazuh-ossec.conf.snippet.xml
deploy/systemd/: README.md  pkgsentinel-refresh-feeds.service  pkgsentinel-refresh-feeds.timer  pkgsentinel-server.service  pkgsentinel-watch-npm.service  pkgsentinel-watch-npm.timer  pkgsentinel-watch-pypi.service  pkgsentinel-watch-pypi.timer  pkgsentinel-worker.service
docs/: 2026-04-29-llm-mode-eval.md  2026-04-29-pipeline-refactor.md  2026-04-29-real-data-eval-550.md  2026-05-06-fp-root-cause.md  2026-05-06-indicator-fp-popular-benign-n300.md  2026-05-06-indicator-fp-popular-benign.md  2026-05-06-indicator-fp-table.md  2026-05-06-session-log.md  2026-05-06-summary.md  2026-05-06-todo.md  architecture.md  cost_model.md
docs/aislopsq/: README.md
docs/diagrams/: 01_overview.mmd  02_pipeline.mmd  03_db.mmd  04_oneliner.mmd  A_system_simple.mmd  B_risk_evaluation.mmd  C_system_with_stack.mmd  _compose.py
docs/references/: 00_MASTER_INDEX.md  01_papers_academic.md  02_frameworks_standards.md  03_industry_reports.md  04_tools_libraries.md  05_data_sources.md  06_related_projects.md  07_STANDBY_STATUS.md
examples/: danger_test.py  indicator_47_demo.py  synthetic_malicious_demo.py
examples/systemd/: README.md  pkgsentinel-cron.service  pkgsentinel-worker.service
scripts/: audit_gate.py  build_popular_benign.py  demo_capstone_dry_run.py  eval_deps_full_recursion.py  eval_deps_recursion.py  eval_llm_consistency.py  eval_popular9.py  eval_real.py  eval_real_analyze.py  eval_real_compare.py  eval_real_fetch.py  eval_real_resynth.py  eval_synthetic.py  eval_synthetic_results.json  indicator_fp_table.py  indicator_fp_table_real.py  monitor_extended_smoke.py  monitor_smoke.py  npm_watcher_smoke.py  sink_e2e_demo.py  smoke_9pkg.py
scripts/eval_real_data/: fixtures.json  indicator_fp_real_results.json  indicator_fp_real_results_n300.json  monitor_sanity.json  popular_benign_manifest.json  popular_benign_manifest_n500.json  results.json  results_compromised_lib.json  results_demo_dry_run.json  results_deps_full_recursion.json  results_deps_recursion.json  results_llm.json  results_llm_smoke.json  (+19 more)
tests/: conftest.py  test_47_indicators.py  test_agentic.py  test_api_analyze_and_iocs.py  test_api_auth.py  test_atlas_owasp.py  test_attack_index_version.py  test_benchmark_harness.py  test_dep_range_resolution.py  test_dependency_parser.py  test_deps_transitive.py  test_indicator_evidence.py  test_intel_osv_export_and_cli.py  test_intel_rule_generator.py  test_master_key_kms.py  test_max_satisfying.py  test_multi_agent.py  test_ossf_malicious.py  test_ossf_package_analysis.py  test_pmg_sink.py  test_r1_strict_mode_and_z2_downloader.py  test_r5_fim_assets.py  test_realtime_pipeline.py  test_runtime_alert_api.py  test_runtime_intel_store.py  test_sandbox_strace.py  test_schema_compliance.py  test_scorecard.py  test_sequence_patterns.py  test_server_flask.py  test_slsa.py  test_ssdf.py  test_stage3b_cache_load.py  test_stage_binary.py  test_stage_cache.py  test_synthetic_malicious.py  test_taint_slicer.py  test_taxii_sink.py  test_threat_db_integration.py  test_verdict_rules.py  (+5 more)
(+134 files in other folders)
